<resources>
    <string name="app_name">GoGaganer</string>

    <string name="btn_login">Login</string>
    <string name="btn_create_account">Create Account</string>
    <string name="btn_forgot_pwd">Forgot Password</string>
    <string name="lbl_powerd_by">Powered By</string>

    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_state">State</string>
    <string name="lbl_city">City</string>
    <string name="lbl_city_area">City Area</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_cofirm_password">Confirm Password</string>
    <string name="lbl_iagree">I have read <u>Terms &amp; Conditions </u>to use GoGagner &amp; I AGREE the same.</string>
    <string name="lbl_create_account">Create Account</string>
    <string name="lbl_forgot_pwd">Forgot your Password ?</string>
    <string name="lbl_otp_reminder">OTP will recieve in  </string>
    <string name="lbl_otp_verify">Verify OTP</string>
    <string name="lbl_otp_resend">Havent recieved OTP ? Resend</string>
    <string name="signup_success">You have sign up successfully</string>
    <string name="signup_error">Unable to sign up, Please try again later.</string>
    <string name="login_success">You have login successfully</string>
    <string name="login_error">Unable to login, Please try again later.</string>

    <string name="lbl_new_password">New Password</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_reset_password">Reset Password</string>

    <string name="lbl_register_otp">Registered Mobile Number or Email</string>
    <string name="lbl_register_hint">OTP will be send to your registered mobile number or email.</string>
    <string name="lbl_request_otp">Request OTP</string>

    <string name="lbl_no_internet">No Internet Connection,please try again </string>

    <string name="lbl_enter_valid_otp">Please enter OTP</string>
    <string name="lbl_error_valid_otp">Please enter valid  OTP</string>
    <array name="nav_drawer_labels">
        <item>Reset Password</item>
        <item>Log Out</item>

        <!-- <item>Parking</item>-->
    </array>
    <string name="drawer_text_tag">drawer_text</string>
    <string name="enter_mob_no">Please enter 10 digit mobile number</string>
    <string name="enter_valid_email">Please enter valid email id</string>
    <string name="enter_valid_pwd">Please enter valid pasword</string>
    <string name="enter_valid_pwd_mismatch">Password mismatch.</string>
    <string name="enter_valid_email_mobilenumber">Please Enter Valid Mobile Number or Email Id</string>
    <string name="i_agree_error">You must agree to the terms and conditions before registering</string>
    <string name="enter_valid_confirm_pwd">Password is missmatch</string>
    <string name="signup_first_error">Please enter first name.</string>
    <string name="signup_last_error">Please enter last name.</string>
    <string name="signup_pwd_error">Please enter valid password.</string>
    <string name="pwd_policy_error">"Note:\n* Password should be At-least 6 characters, must have alphabets and numbers.\n* At-least one capital alphabet and special character."</string>


    <string name="search_hint">Search Product/Buisness/Category</string>
    <string name="state">STATE</string>
    <string name="city">CITY</string>
    <string name="locality">LOCALITY</string>
    <array name="city_array">
    <item>CITY</item>
    </array>
    <string name="whats_new">What\'s new</string>

    <array name="buyer_menu">
        <item>Home</item>
        <item>Categories</item>
        <item>My Favourites</item>
        <item>My Orders</item>
        <item>My Earnings</item>
        <item>My Profile</item>
        <item>Switch to Seller</item>
        <item>Post Advertise</item>
        <item>Post Status</item>
        <item>Coin System Help</item>
        <item>Purchase Coins</item>
        <item>Manage Cards</item>
        <item>Rate us</item>
        <item>About us</item>
        <item>Term of use</item>
        <item>Privacy Policy</item>
        <item>Log out</item>
        <!-- <item>Parking</item>-->
    </array>


    <string name="add">Add</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="product_hint">Enter Products for the Store</string>
    <string name="department_store">My Department Store &#8230;</string>

    <string-array name="dept_array">
        <item>Apparel</item>
        <item>Beauty</item>
        <item>Electronics</item>
        <item>Grocery</item>
        <item>Home Improvement</item>
        <item>Jewelry</item>
        <item>Pharmacy</item>
    </string-array>
    <string name="lbl_free_coins">Free Coins</string>
    <string name="lbl_removeProfile">Remove Photo</string>
    <string name="lbl_ChangeProfile">Change Profile</string>
    <string name="lbl_ChangePwd">Change Password</string>
    <string name="lbl_oldPwd">Old Password</string>

    <string name="lbl_empty_oldPwd">Kindly enter old password</string>
    <string name="lbl_empty_newPwd">Kindly enter new Password</string>

    <string name="lbl_old_newPwd">New password is not same as old password</string>
    <string name="lbl_pwd_mismatch">Password Missmatch</string>
    <string name="session_refresh_ongoing">Session is refreshing please try in some time</string>
    <string name="session_refresh_fail">Session refresh failed</string>
    <string name="lbl_save_change">Save Changes</string>
    <string name="lbl_dob">Date Of Birth </string>
    <string name="lbl_aadhar_number">Aadhar Number </string>
    <string name="dob_error">Please enter Date of Birth.</string>
    <string name="adhar_error">Please enter valid Aadhar Card.</string>
    <string name="popup_messege">Please wait.</string>
    <string name="imagePickeError">Please Select Image</string>
    <string name="post_add_lbl_select_location">Please select the location where you would like to display your Advertisement and check
    below where and how it will be displayed.</string>
    <string name="btn_next">Next</string>
    <string name="post_add">Post Add</string>
    <string name="post_add_date">Schedule a date</string>

    <string name="post_add_buisness_location_validation">Please Select Advertise Location</string>
    <string name="post_add_buisness_buisness_validation">Please Select Buisness</string>
    <string name="post_add_buisness_buisness_category_validation">Please Select Buisness Category.</string>
    <string name="post_add_buisness_buisness_sub_category_validation">Please Select Buisness Subcategory.</string>
    <string name="post_add_buisness_buisness_date_validation">Please Select Schedule Date</string>
</resources>
