<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor">

    <ImageView
        android:id="@+id/aboverBanner"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/splash_screen_upper_logo" />

    <custom.customEditTextView
        android:id="@+id/edMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@id/aboverBanner"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginTop="@dimen/size_40"
        android:layout_marginRight="@dimen/size_20"
        android:background="@drawable/bg_edittext_icon"
        android:drawableLeft="@drawable/mobile"
        android:drawablePadding="@dimen/size_20"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:textAllCaps="true"
        android:textColor="@color/white_txt"
        android:textColorHint="@color/white_txt"
        android:textSize="@dimen/text_size_15" />

    <custom.customEditTextView
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@id/edMobileNumber"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginTop="8dp"
        android:layout_marginRight="@dimen/size_20"
        android:background="@drawable/bg_edittext_icon"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="20dp"
        android:hint="@string/lbl_first_name"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="12dp"
        android:textAllCaps="true"
        android:textColor="@color/white_txt"
        android:textColorHint="@color/white_txt"
        android:textSize="@dimen/text_size_15" />

    <custom.customTextView
        android:id="@+id/tvForgotPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edPassword"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginTop="@dimen/text_size_12"
        android:layout_marginRight="@dimen/size_20"
        android:gravity="right"
        android:text="@string/lbl_forgot_pwd"
        android:textColor="@color/white"

        android:textSize="@dimen/text_size_12"

        />

    <custom.customButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@id/tvForgotPwd"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginTop="@dimen/text_size_12"
        android:layout_marginRight="@dimen/size_20"
        android:background="@drawable/custom_bg_login"
        android:text="@string/btn_login"
        android:textSize="@dimen/text_size_15"

        android:textAllCaps="true"
        android:textColor="@color/white_txt" />

    <custom.customTextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/text_size_15"
        android:gravity="center_horizontal"
        android:text="dfhsjhf"
        android:textColor="@color/white_txt"
        android:textSize="@dimen/text_size_12" />


    <ImageView
        android:id="@+id/bottomBanner"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginBottom="@dimen/text_size_12"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/splash_screen_bottom_logo" />
</RelativeLayout>