<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:id="@+id/line_indicator_bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="90">

        <ImageView
            android:id="@+id/imline_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="30"
            android:background="@color/inner_red" />

        <ImageView
            android:id="@+id/imvline_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="30"
            android:background="@color/inner_red" />

        <ImageView
            android:id="@+id/imvline_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="30"
            android:background="@color/inner_red" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@id/line_indicator_bottom_panel"

        android:background="@color/bgColor"
        android:orientation="horizontal"
        android:weightSum="90">

        <ImageView
            android:id="@+id/imvPannel_one"
            android:layout_width="0dp"

            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="30" />

        <ImageView
            android:id="@+id/imvPannel_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="30" />

        <ImageView
            android:id="@+id/imvPannel_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="30" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/profile_bottom_panel"
        android:background="@color/white">

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/editProfileChangePwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">



                <custom.customEditTextView
                    android:layout_marginTop="100dp"
                    android:id="@+id/edOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/size_20"
                    android:layout_marginRight="@dimen/size_20"
                    android:background="@drawable/bg_white_edittext"
                    android:drawableLeft="@drawable/black_password"
                    android:drawablePadding="@dimen/size_20"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textAllCaps="true"
                    android:textColor="@color/black_txt"
                    android:textColorHint="@color/black_txt"
                    android:textSize="@dimen/text_size_12" />

                <custom.customEditTextView
                    android:id="@+id/edNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/edOldPassword"
                    android:layout_marginLeft="@dimen/size_20"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="@dimen/size_20"
                    android:background="@drawable/bg_white_edittext"
                    android:drawableLeft="@drawable/black_password"
                    android:drawablePadding="20dp"
                    android:hint="@string/lbl_first_name"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textAllCaps="true"
                    android:textColor="@color/black_txt"
                    android:textColorHint="@color/black_txt"
                    android:textSize="@dimen/text_size_12" />

                <custom.customEditTextView

                    android:layout_below="@+id/edNewPassword"
                    android:layout_marginTop="10dp"
                    android:id="@+id/edConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/size_20"
                    android:layout_marginRight="@dimen/size_20"
                    android:background="@drawable/bg_white_edittext"
                    android:drawableLeft="@drawable/black_password"
                    android:drawablePadding="@dimen/size_20"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textAllCaps="true"
                    android:textColor="@color/black_txt"
                    android:textColorHint="@color/black_txt"
                    android:textSize="@dimen/text_size_12" />



                <custom.customButton
                    android:id="@+id/btnResetPwd"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_below="@id/edConfirmPassword"
                    android:layout_marginLeft="@dimen/size_20"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="@dimen/size_20"
                    android:background="@drawable/custom_bg_login"
                    android:text="@string/lbl_ChangePwd"
                    android:textSize="@dimen/text_size_12"

                    android:textAllCaps="true"
                    android:textColor="@color/white_txt" />


            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/editProfilChangeImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <RelativeLayout

                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_centerInParent="true"
                android:background="@drawable/coin_background"
                android:elevation="@dimen/size_40">

                <ImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/img_add_avatar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/size_20"
                    android:layout_marginRight="@dimen/size_20"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <custom.customButton
                        android:id="@+id/btnRemovePhoto"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/size_5"
                        android:layout_weight="1"
                        android:background="@drawable/custom_bg_login"
                        android:padding="@dimen/size_5"
                        android:text="@string/lbl_removeProfile"
                        android:textColor="@color/white_txt"
                        android:textSize="8dp" />

                    <custom.customButton
                        android:id="@+id/btnChangePhoto"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/size_5"
                        android:layout_weight="1"
                        android:background="@drawable/custom_bg_login"
                        android:padding="@dimen/size_5"
                        android:text="@string/lbl_ChangeProfile"
                        android:textColor="@color/white_txt"
                        android:textSize="8dp" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>